[package]
name = "google-fonts"
version = "0.1.6"
edition = "2024"
authors = ["Rana Ian"]
description = "Download and cache TTF fonts from Google."
documentation = "https://docs.rs/google-fonts"
readme = "../README.md"
keywords = ["font", "google", "graphics", "true-type", "ttf"]
categories = ["api-bindings", "graphics", "text-processing", "rendering"]
license = "MIT"
repository = "https://github.com/rana/google-fonts"

[lib]
path = "src/lib.rs"
name = "google_fonts"
crate-type = ["lib"]
required-features = []

[features]
default = ["variable"]
full = ["variable", "static"]
static = []
variable = []

[dependencies]
dirs = "6"
serde_json = "1"

[dependencies.reqwest]
version = "0.13"
features = ["http2", "rustls", "blocking", "query"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.strum]
version = "0.27"
features = ["derive", "strum_macros"]

[dev-dependencies]
ttf-parser = "0.25"

[[example]]
path = "examples/download.rs"
name = "download"
required-features = ["full"]

[[example]]
path = "examples/enumerate.rs"
name = "enumerate"
required-features = []

[[example]]
path = "examples/serde.rs"
name = "serde"
required-features = []
