[package]
name = "google-fonts"
version = "0.2.0"
edition = "2024"
authors = ["Rana Ian"]
description = "Download and cache TTF fonts from Google."
documentation = "https://docs.rs/google-fonts"
readme = "../README.md"
keywords = ["font", "google", "graphics", "true-type", "ttf"]
categories = ["api-bindings", "graphics", "text-processing", "rendering"]
license = "MIT"
repository = "https://github.com/rana/google-fonts"

[lib]
path = "src/lib.rs"
name = "google_fonts"
crate-type = ["lib"]
required-features = []

[features]
default = ["variable", "rustls-tls"]
full = ["variable", "static", "serde", "strum", "metadata", "fns", "rkyv", "facet", "rustls-tls"]
static = []
variable = []
serde = []
strum = ["dep:strum"]
metadata = []
fns = []
rkyv = ["dep:rkyv"]
facet = ["dep:facet"]
# TLS backend (pick one)
rustls-tls = ["reqwest/rustls"]
native-tls = ["reqwest/native-tls"]

[dependencies]
dirs = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dependencies.reqwest]
version = "0.13"
default-features = false
features = ["http2", "blocking", "query"]

[dependencies.strum]
version = "0.27"
features = ["derive", "strum_macros"]
optional = true

[dependencies.rkyv]
version = "0.8"
optional = true

[dependencies.facet]
version = "0.42"
optional = true

[dev-dependencies]
ttf-parser = "0.25"

[[example]]
path = "examples/download.rs"
name = "download"
required-features = ["fns"]

[[example]]
path = "examples/enumerate.rs"
name = "enumerate"
required-features = ["strum", "metadata"]

[[example]]
path = "examples/serde.rs"
name = "serde"
required-features = ["serde"]
